Fixed styling components Fixed responsive behaviour for mobile Fixed body shifting problem for phone

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -99,7 +99,7 @@
         margin: 0 auto 3rem
     }
 
-    .about__card {
+    .about__cards {
         grid-template-columns: 1fr 1fr;
         gap: 1rem;
     }
