--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -33,8 +33,8 @@ header {
     bottom: 3rem;
 }
 
-.header__socials:after{
-    content: '';
+.header__socials::after{
+    content: "";
     width: 1px;
     height: 2rem;
     background: var(--color-primary);
@@ -49,6 +49,8 @@ header {
     height: 30rem;
     position: absolute;
     left: calc(50% - 11rem);
+    /* left: 50%;
+    transform: translateX(-50%); */
     margin-top: 4rem;
     border-radius: 12rem 12rem 0 0;
     overflow: hidden;
@@ -56,7 +58,7 @@ header {
 }
 
 
-/* ===================== ME ===================== */
+/* ===================== SCROLL DOWN ===================== */
 
 .scroll__down{
     position: absolute;
@@ -72,7 +74,7 @@ header {
 
 @media screen and (max-width: 1024px) {
     header {
-        height: 100vh;
+        height: 150vh;
     }
 }
 
@@ -81,6 +83,10 @@ header {
 
 @media screen and (max-width: 600px) {
     header {
-        height: 200vh;
+        height: 150vh;
+    }
+
+    .header__socials, .scroll__down {
+        display: none;
     }
 }
