--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -37,5 +37,11 @@ nav a.active{
 @media screen and (max-width: 600px) {
     nav {
         gap: 0.1rem;
+        padding: 0.4rem 0.6rem;
+    }
+
+    nav a {
+        font-size: 0.9rem;
+        padding: 0.7rem;
     }
 }
