--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
@@ -37,6 +38,8 @@ body {
     font-family: 'Poppins', sans-serif;
     background-color: var(--color-bg);
     color: var(--color-white);
+    line-height: 1.7;
+    overflow-x: hidden;
     background-image: url(../src/assets/bg-texture.png);
 }
 
@@ -57,6 +60,7 @@ h1 {
 
 section {
     margin-top: 8rem;
+    /* height: 150vh; */
 }
 
 section > h2, section > h5 {
